--- a/166parm_Time_series_results_James.Rmd
+++ b/166parm_Time_series_results_James.Rmd
@@ -491,48 +491,14 @@ x <- runif(nrow(df_analysis))
 train <- ifelse(x < 0.9, TRUE, FALSE)
 
 train_set <- df_analysis[train,]  %>% 
-  mutate(no3_decline_f = factor(no3_decline)) %>% select(-no3_decline, -longitude, - latitude) %>%
+  # mutate(no3_decline_f = factor(no3_decline)) %>% select(-no3_decline, -longitude, - latitude) %>%
   as.data.frame()
 valid_set <- df_analysis[!train,] %>% 
-  mutate(no3_decline_f = factor(no3_decline)) %>% select(-no3_decline, -longitude, - latitude) %>%
+  # mutate(no3_decline_f = factor(no3_decline)) %>% select(-no3_decline, -longitude, - latitude) %>%
   as.data.frame()
 
 ```
 
-
-### a. Tree classification using 'party'   
-```{r, fig.width=8, fig.height=8}
-
-(ct = ctree(no3_decline_f ~ ., data = train_set))
-
-plot(ct, main="Conditional Inference Tree")
-
-cat("\n\n")
-cat("Table of prediction errors \n")
-table(predict(ct), train_set$no3_decline_f)
-cat("\n\n")
-
-cat("Classification of training set \n")
-tr.pred = predict(ct, newdata = valid_set, type="prob")
-colnames(tr.pred) <- c("P0", "P1")
-# tr.pred <- tr.pred %>% map_dfr(~data.frame(P0 = .[1], P1 = .[2]))
-table(tr.pred[,"P1"] > 0.5, valid_set$no3_decline_f)
-
-
-```
-
-### b. Evtree (Evolutionary Learning)   
-```{r, fig.width=8, fig.height=8}
-
-ev.raw = evtree(no3_decline_f ~ ., data = train_set)
-
-plot(ev.raw)
-cat("Predicted in training data: \n")
-table(predict(ev.raw), train_set$no3_decline_f)
-
-cat("\n\nPrediction errors in training data: \n")
-1-mean(predict(ev.raw) == train_set$no3_decline_f)
-```
 
 
 ### c. Random forest  
@@ -718,72 +684,4 @@ for (i in 1:length(plotdata)){
 # visreg(dd1b_mod1, scale = "response")
 
 ```
-
-
-## 6. Logistic regression       
-Start model: **`r params$logistic_formula`**
-```{r, results  = "hold"}
-
-fm <- glm(
-  as.formula(params$logistic_formula),
-  data = df_analysis, 
-  family = "binomial",  
-  na.action = "na.fail")
-
-dredged_models <- dredge(fm)                       # only once
-# saveRDS(dredged_models, "Data/162_all_dredged_models.rds")    # save it as it takes a couple of minutes
-# dredged_models <- readRDS("Data/162_all_dredged_models.rds")
-
-# cat("\n\nR2: \n")
-# mod1 <- get.models(dredged_models, 1)[[1]]  
-# summary(mod1)  
-
-```  
-
-### Best models  
-```{r}
-# subset(dredged_models, delta < 1)
-
-subset(dredged_models, delta < 2)
-
-# Alternative way of showing result (didn't become any better)
-# df <- subset(dredged_models, delta < 2)
-# select(as.data.frame(df) %>% round(6), -`(Intercept)`, -logLik, -AICc)
-
-```
-
-
-### Plots  
-```{r, message=FALSE, results  = "hold"}
-
-# Pick model with lowest AICc
-mod1 <- get.models(dredged_models, 1)[[1]]  
-
-summ <- summary(mod1)
-dev_expl <- summ$deviance/summ$null.deviance
-cat("Percentage of deviance explained:", round(100*dev_expl, 1), "% \n")
-
-modelvars <- get_model_variables(mod1)
-
-# Interactions: 3D plot 
-# visreg2d(mod1, xvar = vars[1], yvar = vars[2], 
-#          type = 'conditional', scale = "response") 
-
-# Interactions: 2D plot 
-if (length(modelvars$interaction_list) > 0){
-  modelvars$interaction_list %>% purrr::walk(
-    ~visreg(mod1, .x[1], by = .x[2], scale = "response")
-  )
-}
-
-# Additive effects: 1D plot
-if (length(modelvars$additive_vars) > 0){
-  par(mfrow = c(2,3), mar = c(4,5,2,1), oma = c(0,0,2,0))
-  for (var in modelvars$additive_vars)
-    visreg(mod1, var, scale = "response")  
-}
-
-```
-
-
 
