--- a/166parm_Time_series_results_James.Rmd
+++ b/166parm_Time_series_results_James.Rmd
@@ -14,6 +14,8 @@ params:
     value: 'Data with slope_dep_vs_time, NO3, and TOTN_dep'
   selected_vars: 
     value: 'slope_no3_vs_time,catchment_area, TOC,slope_dep_vs_time, NO3, TOTN_dep, latitude, longitude, altitude,pre, tmp, slope_pre, slope_tmp, urban, cultivated, coniferous, decid_mixed, total_shrub_herbaceous,wetland, lake_water, bare_sparse'
+  response_variable:
+    value: 'slope_no3_vs_time'  
   extra_pairwise_plots:
     value: 'TOC,NO3; slope_dep_vs_time,TOTN_dep; altitude,decid_mixed'
   pairwise_plots_same_scale:
@@ -430,7 +432,8 @@ dat <- dat %>%
 df_analysis_allrows <- add_flag_variable(dat, params$selected_vars)  
 
 # Save to excel
-fn <- paste0(substr(params$document_title, 1, 3), "_", response_var, "_data.xlsx")
+document_code <- stringr::str_extract(params$document_title, "([^[[:blank:]]]+)")   # extract e.g. "164a1"
+fn <- paste0(document_code, "_", params$response_variable, "_data.xlsx")
 writexl::write_xlsx(df_analysis_allrows, paste0("Data_analysed/", fn))
 cat("\nDataset after removing urban, cultivated, PL05 saved as", sQuote(fn), "\n\n")
 
@@ -490,10 +493,12 @@ x <- runif(nrow(df_analysis))
 train <- ifelse(x < 0.9, TRUE, FALSE)
 
 train_set <- df_analysis[train,]  %>% 
-  # mutate(no3_decline_f = factor(no3_decline)) %>% select(-no3_decline, -longitude, - latitude) %>%
+  # mutate(no3_decline_f = factor(no3_decline)) %>% 
+  select(-longitude, - latitude) %>%
   as.data.frame()
 valid_set <- df_analysis[!train,] %>% 
-  # mutate(no3_decline_f = factor(no3_decline)) %>% select(-no3_decline, -longitude, - latitude) %>%
+  # mutate(no3_decline_f = factor(no3_decline)) %>% 
+  select(-longitude, - latitude) %>%
   as.data.frame()
 
 ```
@@ -512,15 +517,30 @@ model1 <- randomForest(slope_no3_vs_time ~ .,
                        mtry = 5,
                        importance = TRUE)
 
-# Predicting on train set
-pred_valid <- predict(model1, valid_set, type = "class")
-# Checking classification accuracy
-table(pred_valid, valid_set$no3_decline)  
+# Predicting in training set
+df_plot <- data.frame(
+  Predicted = predict(model1, train_set),
+  Observed = train_set[[params$response_variable]])
+ggplot(df_plot, aes(Predicted, Observed)) +
+  geom_abline(intercept = 0, slope = 1) +
+  geom_point() +
+  labs(title = "Predictions in training set")
 
-error_fraction <- mean(
-  (pred_valid == 0 & valid_set$no3_decline == 1) | 
-    (pred_valid == 1 & valid_set$no3_decline == 0))
-cat("Error rate for training data:", round(error_fraction*100, 1), "%\n")
+cat("R-square, predicting in training set: \n")
+summary(lm(Observed ~ Predicted, data = df_plot))$r.sq
+
+# Predicting in validation set
+df_plot <- data.frame(
+  Predicted = predict(model1, valid_set),
+  Observed = valid_set[[params$response_variable]])
+ggplot(df_plot, aes(Predicted, Observed)) +
+  geom_abline(intercept = 0, slope = 1) +
+  geom_point() +
+  labs(title = "Predictions in validation set")
+
+cat("R-square, predicting in validation set: \n")
+summary(lm(Observed ~ Predicted, data = df_plot))$r.sq
+
 
 ```
 
@@ -528,8 +548,8 @@ cat("Error rate for training data:", round(error_fraction*100, 1), "%\n")
 ```{r}  
 
 full_set <- df_analysis  %>% 
-  mutate(no3_decline = factor(no3_decline)) %>% 
-  select(-no3_decline, -longitude, - latitude) %>%
+  # mutate(no3_decline = factor(no3_decline)) %>% 
+  select(-longitude, - latitude) %>%
   as.data.frame()
 
 model1 <- randomForest(slope_no3_vs_time ~ ., 
@@ -537,15 +557,19 @@ model1 <- randomForest(slope_no3_vs_time ~ .,
                        mtry = 5,
                        importance = TRUE)
 
-# Predicting on train set
-pred_valid <- predict(model1, valid_set, type = "class")
-# Checking classification accuracy
-table(pred_valid, valid_set$no3_decline)  
 
-error_fraction <- mean(
-  (pred_valid == 0 & valid_set$no3_decline == 1) | 
-    (pred_valid == 1 & valid_set$no3_decline == 0))
-cat("Error rate for training data:", round(error_fraction*100, 1), "%\n")
+# Prediction
+df_plot <- data.frame(
+  Predicted = predict(model1, full_set),
+  Observed = full_set[[params$response_variable]])
+ggplot(df_plot, aes(Predicted, Observed)) +
+  geom_abline(intercept = 0, slope = 1) +
+  geom_point() +
+  labs(title = "Predictions in entire data set")
+
+cat("R-square, predicting in entire data set: \n")
+summary(lm(Observed ~ Predicted, data = df_plot))$r.sq
+
 
 ```
 
@@ -561,11 +585,27 @@ importance <- measure_importance(model1)
 
 ```{r}
 
+
 plot_multi_way_importance(importance, size_measure = "no_of_nodes", no_of_labels = 6)  
-plot_multi_way_importance(importance, 
-                          x_measure = "accuracy_decrease", 
-                          y_measure = "gini_decrease", 
-                          size_measure = "p_value", no_of_labels = 6)
+
+if (FALSE){
+  # For classification (discrete response variable)
+  plot_multi_way_importance(importance, 
+                            x_measure = "accuracy_decrease", 
+                            y_measure = "gini_decrease", 
+                            size_measure = "p_value", no_of_labels = 6)
+} else {
+  
+  # For regression (continuous response variable)
+  plot_multi_way_importance(importance, 
+                            x_measure = "mse_increase", 
+                            y_measure = "node_purity_increase",
+                            size_measure = "p_value", no_of_labels = 6)
+}
+
+importance %>% 
+  arrange(times_a_root)
+
 
 ```
 
@@ -578,7 +618,7 @@ plot_multi_way_importance(importance,
 # Which variables to include:
 variables_for_plot <- importance %>%
   mutate(variable = levels(variable)[as.numeric(variable)]) %>%
-  arrange(desc(gini_decrease)) %>%
+  arrange(desc(times_a_root)) %>%
   pull(variable) %>%
   head(12)   # pick the first 12 variables (or less)
 
